--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Projet_Quiz</title>
 </head>
 <body>
-    <button>Commencer l'aventure</button>
+    <div class="button-container">
+        <button id="start-btn">Commencer l’aventure</button>
+        <div class="fireflies"></div>
+    </div>
 </body>
 </html>
