10 lucioles OK partout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 <body>
     <div class="button-container">
         <button id="start-btn">Commencer l’aventure</button>
-        <div class="fireflies"></div>
+        <div class="fireflies">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
 </body>
 </html>
