6 questions / 12 ok en js

--- a/index.html
+++ b/index.html
@@ -29,12 +29,24 @@
     <main id="page-quiz-container" class="hidden">
         <section class="bloc-questionreponse"> <!--Bloc support -->
             <h2 id="titre-question">✧ Question 1 ✧</h2>
-            <p id="texte-question">Tu es en plein coeur d'une forêt par temps brumeux et tu entends un bruit d'animal sauvage ! Que fais-tu ?</p>
+            <p id="texte-question">En marchant dans la forêt brumeuse, tu entends un bruit étrange dans les feuillages. Que fais-tu ?</p>
             <div class="bloc-reponses"> <!--Bloc des 4 btns réponses-->
-                <button class="bouton-reponse">Je m'allonge et je fais le mort</button>
-                <button class="bouton-reponse">Je cours et cries en même temps !</button>
-                <button class="bouton-reponse">Je met ma garde et attends le combat!</button>
-                <button class="bouton-reponse">Je monte à l'arbre le plus proche !</button>
+                <button class="bouton-reponse">
+                    <span class="icone-rep">🔍</span>
+                    <span class="texte-rep">J’observe calmement sans bouger.</span>
+                </button>
+                <button class="bouton-reponse">
+                    <span class="icone-rep">😂</span>
+                    <span class="texte-rep">J’imite le bruit pour rigoler.</span>
+                </button>
+                <button class="bouton-reponse">
+                    <span class="icone-rep">🛡️</span>
+                    <span class="texte-rep">J’avance prudemment, prêt à aider.</span>
+                </button>
+                <button class="bouton-reponse">
+                    <span class="icone-rep">🦊</span>
+                    <span class="texte-rep">Je change discrètement de chemin.</span>
+                </button>
             </div>
         </section>
         <div class="brume"></div>
