lien bouton accueil à Q1 OK

--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
     <!--id="page-quiz-container" class="hidden" = Wall arbres + Bloc support questions avec par dessus questions et le bloc de réponses  -->
     <main id="page-quiz-container" class="hidden">
         <section class="bloc-questionreponse"> <!--Bloc support -->
-            <h2 id="titre-question">✧ Question 1 ✧</h2>
-            <p id="texte-question">En marchant dans la forêt brumeuse, tu entends un bruit étrange dans les feuillages. Que fais-tu ?</p>
+            <h2 id="titre-question"></h2>
+            <p id="texte-question"></p>
             <div class="bloc-reponses"> <!--Bloc des 4 btns réponses-->
                 <button class="bouton-reponse">
-                    <span class="icone-rep">🔍</span>
-                    <span class="texte-rep">J’observe calmement sans bouger.</span>
+                    <span class="icone-rep"></span>
+                    <span class="texte-rep"></span>
                 </button>
                 <button class="bouton-reponse">
-                    <span class="icone-rep">😂</span>
-                    <span class="texte-rep">J’imite le bruit pour rigoler.</span>
+                    <span class="icone-rep"></span>
+                    <span class="texte-rep"></span>
                 </button>
                 <button class="bouton-reponse">
-                    <span class="icone-rep">🛡️</span>
-                    <span class="texte-rep">J’avance prudemment, prêt à aider.</span>
+                    <span class="icone-rep"></span>
+                    <span class="texte-rep"></span>
                 </button>
                 <button class="bouton-reponse">
-                    <span class="icone-rep">🦊</span>
-                    <span class="texte-rep">Je change discrètement de chemin.</span>
+                    <span class="icone-rep"></span>
+                    <span class="texte-rep"></span>
                 </button>
             </div>
         </section>
