12 images propres, légères et OK

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- class="page-accueil-container" = Wall d'accueil + BTN d'accueil + lucioles + cadre aux 12 questions -->
     <div class="page-accueil-container">  
-            <button id="start-btn">Commencer l’ aventure</button>
+            <button id="start-btn">Commencer <br>l’ aventure</button>
             <div class="lucioles">
                 <span></span>
                 <span></span>
